--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <button class="sidebar-toggle">☰</button>
 
     <div class="article">
-        <img src="/pc.jpg" class="img">
+        <img src="./pc.jpg" class="img">
        </div>
 
 
@@ -34,7 +34,7 @@
       </div>
     </div>
     <div class="author-box">
-      <img src="/555555555555.jpg" alt="Sabelo Mawela" class="author-gravatar">
+      <img src="./555555555555.jpg" alt="Sabelo Mawela" class="author-gravatar">
       <div class="author-info">
         <span class="author-title">Author</span>
         <span class="author-name">Sabelo Mawela</span>
