--- a/index.html
+++ b/index.html
@@ -64,5 +64,5 @@
     In essence, "Why Has Nobody Told Me This Before" transcends the confines of traditional self-help literature. It is not merely a book to be read but a companion to be cherished—a guiding light illuminating the path to emotional resilience and fulfillment. As readers embark on their own quest for mental wellness, they will find solace, wisdom, and profound insights within its pages, forever altering the way they perceive themselves and the world around them.</p>
 </div>
 </body>
-<script src="/index.js"></script>
+<script src="./index.js"></script>
 </html>
